// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DELETE /api/admin/viajes (caracterización) > 200: borra con id string y autoCommit 1`] = `
[
  {
    "binds": {
      "id": "5",
    },
    "options": {
      "autoCommit": true,
    },
    "sql": "DELETE FROM VIAJES WHERE ID_VIA = :id",
  },
]
`;

exports[`GET /api/admin/viajes (caracterización) > 200 con las filas tal cual (comportamiento actual: sin autenticación) 1`] = `
[
  {
    "binds": undefined,
    "options": undefined,
    "sql": "
      SELECT v.ID_VIA as "id", 
             mo.NOMBRE_MUN || ' - ' || md.NOMBRE_MUN as "ruta", 
             TO_CHAR(v.TIEMPO_SALIDA_VIA, 'YYYY-MM-DD') as "fecha", 
             ev.ESTADO_EST_VIA as "estado",
             u.NOMBRE_USU || ' ' || u.APELLIDO_USU as "conductor",
             (SELECT LISTAGG(u2.NOMBRE_USU || ' ' || u2.APELLIDO_USU, ', ') WITHIN GROUP (ORDER BY u2.NOMBRE_USU)
              FROM SOLICITUDES s 
              JOIN USUARIOS u2 ON s.USUARIOS_ID_USU = u2.ID_USU 
              WHERE s.VIAJES_ID_VIA = v.ID_VIA AND s.ESTADO_ID_EST = 2) as "pasajeros"
      FROM VIAJES v
      JOIN USUARIOS u ON v.USUARIOS_ID_USU = u.ID_USU
      JOIN ESTADOS_VIA ev ON v.ESTADO_VIA_ID_EST_VIA = ev.ID_EST_VIA
      JOIN MUNICIPIOS mo ON v.MUNICIPIO_ORIGEN_ID = mo.ID_MUN
      JOIN MUNICIPIOS md ON v.MUNICIPIOS_DESTINO_ID = md.ID_MUN
    ",
  },
]
`;

exports[`PUT /api/admin/viajes (caracterización) > estado numérico: UPDATE directo con estadoId 1`] = `
[
  {
    "binds": {
      "estadoId": 3,
      "id": "5",
    },
    "options": {
      "autoCommit": true,
    },
    "sql": "UPDATE VIAJES SET ESTADO_VIA_ID_EST_VIA = :estadoId WHERE ID_VIA = :id",
  },
]
`;

exports[`PUT /api/admin/viajes (caracterización) > estado texto: UPDATE con subconsulta por los primeros 6 caracteres 1`] = `
[
  {
    "binds": {
      "estadoStr": "Finalizado",
      "id": "5",
    },
    "options": {
      "autoCommit": true,
    },
    "sql": "
        UPDATE VIAJES 
        SET ESTADO_VIA_ID_EST_VIA = (
          SELECT ID_EST_VIA 
          FROM ESTADOS_VIA 
          WHERE UPPER(SUBSTR(ESTADO_EST_VIA, 1, 6)) = UPPER(SUBSTR(:estadoStr, 1, 6))
          AND ROWNUM = 1
        )
        WHERE ID_VIA = :id
      ",
  },
]
`;
